<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">Km2</string>
    <string name="hello_world">Hello world!</string>
    <string name="image_description">img</string>
    
    <!-- Menu -->
    <string name="action_logout">Logout</string>
	<string name="action_settings">Settings</string>

    <!-- Actions -->
    <string name="action_new">New item</string>
    <string name="action_example">Example action</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Success -->
    <string name="database_success">Record saved</string>

    <!-- Errors -->
    <string name="server_error">There was an error plaease try again later</string>
    <string name="database_error">Database error</string>
    <string name="location_error">No location found</string>
    <string name="login_invalid">Invalid user or password</string>
    <string name="camara_error">Camara error</string>
    <string name="camara_unavailable">No camera found</string>
    <string name="auth_error">Your session has expired. Please login again</string>

    <!-- Login View -->
    <string name="login_btn">LOGIN</string>
    <string name="login_email_hint">Mail</string>
    <string name="login_password_hint">Password</string>
    <string name="login_loading_text">Fetching data&#8230;</string>

    <!-- Main Menu -->
    <string name="menu_title">Menu</string>
    <string name="traffic_btn">Traffic</string>
    <string name="shops_btn">Shops</string>
    <string name="roads_and_regulations_btn">Roads and Regulations</string>
    <string name="obstructions_btn">Obstructions</string>
    <string name="delivery_tracking_btn">Delivery Tracking</string>
    <string name="upload_btn">UPLOAD DATA</string>

    <!-- Navigation Drawer -->
    <string-array name="navigation_items">
        <item>@string/traffic_btn</item>
        <item>@string/shops_btn</item>
        <item>@string/roads_and_regulations_btn</item>
        <item>@string/obstructions_btn</item>
        <item>@string/delivery_tracking_btn</item>
    </string-array>
    <string-array name="navigation_items_extra">
        <item>Summary</item>
        <item>Guidelines</item>
        <item>Notes</item>
        <item>Schedule</item>
    </string-array>

    <!-- Traffic -->
    <string name="traffic_title">Traffic</string>
    <string name="traffic_no_data">No traffic information.</string>
    <!-- Traffic Counters -->
    <string name="traffic_car">Car</string>
    <string name="traffic_non_motorized_wheeler">Bike</string>
    <string name="traffic_motorized_wheeler">Motorbike</string>
    <string name="traffic_pickup">Pickup/Van</string>
    <string name="traffic_small_truck">Small Truck</string>
    <string name="traffic_medium_truck">Medium Truck</string>
    <string name="traffic_large_truck">Large Truck</string>
    <string name="traffic_other">Others</string>
    <!-- Traffic Actions -->
    <string name="traffic_start_btn">Start</string>
    <string name="traffic_save_btn">Save</string>
    <string name="traffic_submit_btn">Submit</string>

    <!-- Shops -->
    <string name="shops_title">Shops</string>
    <string name="shops_no_data">No shop information.</string>
    <!-- Shops Map -->
    <string name="shops_register_location_btn">Save location</string>
    <string name="shops_register_location_loading">Obtaining Location&#8230;</string>
    <string name="shops_register_location_no_connection">Not connected to the Internet. Location can still be obtained without visual confirmation. Turn WiFi or Mobile on to view map.</string>
    <string name="shops_register_location_start">Get Location</string>
    <string name="shops_register_location_error">Try again?</string>
    <!-- Shops Form -->
    <string name="shops_block_id">Block ID</string>
    <string name="shops_street_id">Street ID</string>
    <string name="shops_shop_name">Shop Name</string>
    <string name="shops_shop_reference">Shop Reference (3 words)</string>
    <string name="shops_shop_type">Shop Type</string>
    <string name="shops_shop_size">Shop Size</string>
    <string name="shops_front_length">Front Length</string>
    <string name="shops_front_length_hint">Front Length in Strides</string>
    <string name="shops_total_floors">Total Floors</string>
    <string name="shops_loading_area">Loading Area</string>
    <string name="shops_loading_area_type">On or Off Street</string>
    <string name="shops_notes">Notes(300 Char Max)</string>
    <string name="shops_upload_photo_btn">UPLOAD PHOTO</string>
    <string name="shops_upload_photo_saved_btn">PHOTO SAVED</string>
    <string name="shops_submit_btn">SAVE SHOP</string>

    <string-array name="shops_shop_type">
        <item>Food Specialty Stores</item>
        <item>Grocery Store (Fresh Goods)</item>
        <item>Grocery Store (Dry Goods)</item>
        <item>Supermarket + Convinience Stores</item>
        <item>Cafes, Restaurantes, Bars</item>
        <item>Clothing and Fashion</item>
        <item>Home Improvements</item>
        <item>Drugstores</item>
        <item>Office Supplies</item>
        <item>Other Retail</item>
    </string-array>
    <string-array name="shops_shop_size">
        <item>Kiosk</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <!-- Delivery Tracking -->
    <string name="delivery_tracking_title">Delivery Tracking</string>
    <string name="delivery_tracking_start_instructions">Chose the Block ID and Street ID of the segment you are going to analyze.</string>
    <string name="delivery_tracking_start_block_id">Block ID</string>
    <string name="delivery_tracking_start_street_id">Street ID</string>
    <string name="delivery_tracking_submit_btn">Continue</string>
    <!-- Delivery Tracking Shops -->
    <string name="delivery_tracking_shop_select_instructions">Choose five shops to track their deliveries</string>
    <string name="delivery_tracking_shop_select_continue_btn">SAVE AND CONTINUE</string>
    <string name="delivery_tracking_shop_confirmation_instructions">Confirm and save the selected shops.</string>
    
    <!-- Summary -->
    <string name="summary_title">Summary</string>
    <string name="summary_upload_btn"></string>
    
    <!-- Activities -->
    <string name="title_activity_traffic">Traffic</string>
    <string name="title_activity_shops">Shops</string>
    <string name="title_activity_delivery_tracking">Delivery Tracking</string>
    <string name="title_activity_delivery_tracking_shop">Delivery Tracking Shops</string>

</resources>
