<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical" >
	    
	    <Button
	        android:id="@+id/trafficBtn"
	        android:drawableStart="@drawable/ic_menu_traffic"
	        android:text="@string/traffic_btn"
	        android:background="@color/traffic"
	        style="@style/MenuButton" />
	    
		<Button
	        android:id="@+id/shopsBtn"
	        android:drawableStart="@drawable/ic_menu_shops"
	        android:text="@string/shops_btn"
	        android:background="@color/shops"
	        style="@style/MenuButton" />
	
		<Button
	        android:id="@+id/roadsAndRegulationsBtn"
	        android:drawableStart="@drawable/ic_menu_roads_and_regulations"
	        android:text="@string/roads_and_regulations_btn"
	        android:background="@color/roads_and_regulations"
	        style="@style/MenuButton" />
		
		<Button
	        android:id="@+id/obsructionsBtn"
	        android:drawableStart="@drawable/ic_menu_traffic_disruptions"
	        android:text="@string/obstructions_btn"
	        android:background="@color/traffic_disruptions"
	        style="@style/MenuButton" />
	
		<Button
	        android:id="@+id/deliveryTrackingBtn"
	        android:drawableStart="@drawable/ic_menu_delivery_tracking"
	        android:text="@string/delivery_tracking_btn"
	        android:background="@color/delivery_tracking"
	        style="@style/MenuButton" />
		
		<Button
	        android:id="@+id/uploadBtn"
	        android:drawableStart="@drawable/ic_menu_upload_data"
	        android:background="@color/main_menu_upload_btn"
	        android:text="@string/upload_btn"
	        style="@style/MenuButton" />
		
	</LinearLayout>

</ScrollView>
