<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		
		<!-- BLOCK ID -->
		<LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="@dimen/shops_field_margin"
		    android:orientation="horizontal" >
		    <TextView
		        android:layout_width="@dimen/shops_label_width"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/shops_field_text"
		        android:text="@string/shops_block_id" />
		
		    <EditText
		        android:id="@+id/blockIdField"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/shops_block_id"
		        android:textSize="@dimen/shops_field_text"
		        android:gravity="right"
		        android:inputType="number" >
		        <requestFocus />
		    </EditText>
		</LinearLayout>

        <!-- STREET ID -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shops_field_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="@dimen/shops_label_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/shops_field_text"
                android:text="@string/shops_street_id" />

            <EditText
                android:id="@+id/streetIdField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shops_street_id"
                android:textSize="@dimen/shops_field_text"
                android:gravity="right"
                android:inputType="number" >

            </EditText>
        </LinearLayout>
        
        <!-- SHOP NAME -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shops_field_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="@dimen/shops_label_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/shops_field_text"
                android:text="@string/shops_shop_name" />

            <EditText
                android:id="@+id/shopNameField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shops_shop_reference"
                android:textSize="@dimen/shops_field_text"
                android:gravity="right"
                android:inputType="text" >

            </EditText>
        </LinearLayout>
        
        <!-- SHOP TYPE -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shops_field_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="@dimen/shops_label_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/shops_field_text"
                android:text="@string/shops_shop_type" />

			<Spinner
			    android:id="@+id/shopTypeField"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:hint="@string/shops_shop_type"
                android:textSize="@dimen/shops_field_text"
                android:gravity="right" />
            
        </LinearLayout>
        
        <!-- SHOP SIZE -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shops_field_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="@dimen/shops_label_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/shops_field_text"
                android:text="@string/shops_shop_size" />

			<Spinner
			    android:id="@+id/shopSizeField"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:hint="@string/shops_shop_size"
                android:textSize="@dimen/shops_field_text"
                android:gravity="right" />
            
        </LinearLayout>
        
        <!-- FRONT LENGTH -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shops_field_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="@dimen/shops_label_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/shops_field_text"
                android:text="@string/shops_front_length" />

            <EditText
                android:id="@+id/frontLengthField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shops_front_length_hint"
                android:textSize="@dimen/shops_field_text"
                android:gravity="right"
                android:inputType="number" >

            </EditText>
        </LinearLayout>
        
        <!-- TOTAL FLOORS -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shops_field_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="@dimen/shops_label_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/shops_field_text"
                android:text="@string/shops_total_floors" />

            <EditText
                android:id="@+id/totalFloorsField"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shops_total_floors"
                android:textSize="@dimen/shops_field_text"
                android:gravity="right"
                android:inputType="number" >

            </EditText>
        </LinearLayout>
        
        <!-- LOADING AREA -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/shops_field_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="@dimen/shops_label_width"
                android:layout_height="wrap_content"
                android:textSize="@dimen/shops_field_text"
                android:text="@string/shops_loading_area" />
            
			<Switch 
			    android:id="@+id/loadingAreaField"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textOn="YES"
			    android:textOff="NO"/>

        </LinearLayout>
        
		<!-- LOADING AREA TYPE -->
	    <LinearLayout
	    	android:id="@+id/loadingAreaTypeLayout"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginBottom="@dimen/shops_field_margin"
	        android:visibility="gone"
	        android:orientation="horizontal" >
		
	        <TextView
	            android:layout_width="@dimen/shops_label_width"
	            android:layout_height="wrap_content"
	            android:textSize="@dimen/shops_field_text"
	            android:text="@string/shops_loading_area_type" />
			         
			<Switch 
			    android:id="@+id/loadingAreaTypeField"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textOn="ON"
			    android:textOff="OFF" />
		
		</LinearLayout>
		
	    <!-- NOTES -->
        <EditText
            android:id="@+id/notesField"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shops_notes"
            android:textSize="@dimen/shops_field_text"
            android:layout_marginBottom="@dimen/shops_field_margin"
            android:gravity="left"
            android:inputType="text" />

		<!-- UPLOAD PHOTO BTN -->
		<Button 
		    android:id="@+id/uploadPhotoBtn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginBottom="@dimen/button_margin"
		    android:text="@string/shops_upload_photo_btn"
		    style="@style/SaveButton" />
		 
		<!-- SUBMIT BTN -->
		<Button 
		    android:id="@+id/saveBtn"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/shops_submit_btn"
		    style="@style/ActionButton" />
        
    </LinearLayout>
</ScrollView>