<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivery_tracking_start_instructions"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_tracking_start_block_id"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
		<Spinner
	       android:id="@+id/blockIdField"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:spinnerMode="dialog"
	       android:prompt="@string/delivery_tracking_start_block_id" />
    
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivery_tracking_start_street_id"
            android:layout_marginRight="10dp"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
	    <Spinner
	        android:id="@+id/streetIdField"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:spinnerMode="dialog"
	        android:prompt="@string/delivery_tracking_start_street_id" />     
	          
    </LinearLayout>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/delivery_tracking_submit_btn"
        style="@style/SaveButton" />
    
</LinearLayout>
