<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/city_bg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.mit.lastmile.km2.MainActivity$PlaceholderFragment" >
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:background="@color/login_background">

	    <RelativeLayout
	        android:id="@+id/loadingView"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:layout_centerInParent="true"
	        android:padding="@dimen/activity_padding"
	        android:visibility="gone" >
	       
	      	<ProgressBar
		        style="?android:attr/progressBarStyleLarge"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_centerInParent="true" />
	        
	    </RelativeLayout>
	    
	    <RelativeLayout
	        android:id="@+id/formView"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:padding="@dimen/activity_padding"
	        android:layout_centerInParent="true" >
	
	        <ImageView
	            android:id="@+id/logo"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_alignParentTop="true"
	            android:layout_centerHorizontal="true"
	            android:contentDescription="@string/image_description"
	            android:src="@drawable/logo_login" />
	
	        <EditText
	            android:id="@+id/mailField"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/logo"
	            android:layout_centerHorizontal="true"
	            android:layout_marginTop="@dimen/field_margin"
	            android:ems="@integer/field_ems"
	            android:hint="@string/login_email_hint"
	            android:inputType="textEmailAddress" >
	            <requestFocus />
	        </EditText>
	
	        <EditText
	            android:id="@+id/passwordField"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_below="@+id/mailField"
	            android:layout_centerHorizontal="true"
	            android:hint="@string/login_password_hint"
	            android:layout_marginTop="@dimen/field_margin"
	            android:ems="@integer/field_ems"
	            android:inputType="textPassword" />
	
	        <Button
	            android:id="@+id/loginBtn"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_centerHorizontal="true"
	            android:textColor="@color/login_btn_color"
	            android:text="@string/login_btn" />
	        
	    </RelativeLayout>
        
    </RelativeLayout>

</RelativeLayout>
